--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="container">
 
     <header>
-      <div>
+      <div class="header-container">
         <img src="./images/logo.svg" alt="logo">
         <div class="score">
           <p class="score-text">SCORE</p>
