fix empty h1 issue

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="game-section-container">
         <div class="game-section-inner"></div>
         <div class="result-section">
-          <h1 id="result"></h1>
+          <h1 id="result">""</h1>
           <button class="play-again" onclick="restart()">PLAY AGAIN</button>
         </div>
         <div class="computer"></div>
